--- a/visualizer.css
+++ b/visualizer.css
@@ -1,4 +1,4 @@
-html, body, body:after, canvas {
+canvas {
     content: "";
     background: #012;
     margin: 0;
@@ -8,6 +8,7 @@ html, body, body:after, canvas {
     width: 100%;
     height: 100%;
 }
-body:after {
+
+canvas:after {
     background: linear-gradient(rgba(0,17,34,0) 50%, rgba(0,17,34,.3) 50%) top left/100% 8px;
 }
