--- a/visualizer.css
+++ b/visualizer.css
@@ -1,14 +1,15 @@
 canvas {
-    content: "";
-    background: #141414;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  content: "";
+  background: #141414;
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 canvas:after {
-    background: linear-gradient(rgba(0,0,0,0) 50%, rgba(0,0,0,.3) 50%) top left/100% 8px;
+  background: linear-gradient(rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.3) 50%) top
+    left/100% 8px;
 }
